# 11apes

./: '  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c  run.sh
.nvim/: tasks.json
include/pdp11/: pdp11.h
include/pdp11/core/: cpu.h  ram.h
lib/: CMakeLists.txt
lib/include/: bits.h  conviniences.h
lib/include/pdp11/: pdp11.h  pdp11_console.h  pdp11_op.h  pdp11_papertape_reader.h  pdp11_ram.h  pdp11_rom.h  pdp11_teletype.h  unibus.h
lib/include/pdp11/cpu/: pdp11_cpu.h  pdp11_cpu_instr.h  pdp11_cpu_instr_set.h  pdp11_cpu_psw.h  pdp11_cpu_stat.h  pdp11_psw.h
lib/include/pdp11/unibus/: mutex_unibus_lock.h  unibus.h  unibus_device.h  unibus_lock.h
lib/src/pdp11/: pdp11.c  pdp11_console.c  pdp11_op.c  pdp11_papertape_reader.c  pdp11_ram.c  pdp11_rom.c  pdp11_teletype.c
lib/src/pdp11/cpu/: pdp11_cpu.c  pdp11_cpu_instr.c  pdp11_cpu_instr_set.c  pdp11_psw.c
lib/src/pdp11/unibus/: mutex_unibus_lock.c  unibus.c  unibus_device.c
main/: CMakeLists.txt
main/include/: pdp11_ui.h
main/src/: main.c  main.c.old  pdp11_ui.c
res/papertapes/: pal11.ptap  test1_branch.ptap  test2_cond_branch.ptap  test3_unary.ptap  test4_unary_binary.ptap  test5_rotate_shift.ptap  test6_compare.ptap  test7_compare_not.ptap  test8_move.ptap
src/: main.c
src/pdp11/: pdp11.c
src/pdp11/core/: cpu.c  ram.c
test/: CMakeLists.txt  test.c
test/include/: test_cpu.h  test_unibus.h
test/src/: pdp11_cpu_test.c  test_cpu.c  test_unibus.c  unibus_test.c
